--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -7,5 +7,14 @@
 		<link rel="stylesheet" href="./css/normalize.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
-	<body></body>
+	<body>
+		<h1>Heading 1</h1>
+		<h2>Heading 2</h2>
+		<h3>Heading 3</h3>
+		<p>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima deserunt
+			nihil tenetur dicta, impedit repudiandae praesentium nostrum autem harum
+			vero?
+		</p>
+	</body>
 </html>
