feat: create icon component for enhanced visuals

--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -8,7 +8,21 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<p>Arrow Link Component</p>
-		<a href="#" class="link-arrow">Learn More</a>
+		<p>Icons Component</p>
+		<svg class="icon">
+			<use href="./images/sprite.svg#twitter"></use>
+		</svg>
+		<svg class="icon">
+			<use href="./images/sprite.svg#facebook"></use>
+		</svg>
+		<svg class="icon">
+			<use href="./images/sprite.svg#instagram"></use>
+		</svg>
+		<svg class="icon">
+			<use href="./images/sprite.svg#linkedin"></use>
+		</svg>
+		<svg class="icon">
+			<use href="./images/sprite.svg#telegram"></use>
+		</svg>
 	</body>
 </html>
