feat: implement button component

--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -7,22 +7,10 @@
 		<link rel="stylesheet" href="./css/normalize.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
-	<body>
-		<p>Icons Component</p>
-		<svg class="icon">
-			<use href="./images/sprite.svg#twitter"></use>
-		</svg>
-		<svg class="icon">
-			<use href="./images/sprite.svg#facebook"></use>
-		</svg>
-		<svg class="icon">
-			<use href="./images/sprite.svg#instagram"></use>
-		</svg>
-		<svg class="icon">
-			<use href="./images/sprite.svg#linkedin"></use>
-		</svg>
-		<svg class="icon">
-			<use href="./images/sprite.svg#telegram"></use>
-		</svg>
+	<body align="center">
+		<p>Button Component</p>
+		<button class="btn">Call To Action</button>
+		<br><br>
+		<a href="#" class="btn">Call To Action</a>
 	</body>
 </html>
