--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -7,10 +7,12 @@
 		<link rel="stylesheet" href="./css/normalize.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
-	<body align="center">
-		<p>Button Component</p>
-		<button class="btn">Call To Action</button>
-		<br><br>
-		<a href="#" class="btn">Call To Action</a>
+	<body>
+		<p>Two Column Grid</p>
+		<div class="grid grid--1x2">
+			<div style="height: 100px; background: gold; text-align: center;">Content Box1</div>
+			<div style="height: 100px; background: dodgerblue; text-align: center;">Content Box2</div>
+			<div style="height: 100px; background: lightpink; text-align: center;">Content Box3</div>
+		</div>
 	</body>
 </html>
