--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -13,7 +13,7 @@
 			<nav class="nav">
 				<div class="container">
 					<!-- logo -->
-					<a href="/" class="nav__brand"
+					<a href="#" class="nav__brand"
 						><img src="./images/logo.svg" alt="Zeroda"
 					/></a>
 
@@ -37,11 +37,107 @@
 					</ul>
 
 					<!-- Hamburger Menu -->
-					<svg class="icon" data-dropdown-button>
-						<use href="./images/sprite.svg#menu"></use>
-					</svg>
+					<div class="hamburger" data-dropdown-button>
+						<svg class="icon" data-dropdown-button>
+							<use href="./images/sprite.svg#menu"></use>
+						</svg>
+					</div>
 				</div>
 			</nav>
+
+			<!-- Dropdown Menu -->
+			<section class="dropdown" data-dropdown>
+				<div class="dropdown-menu">
+					<!-- Cross icon for closing Dropdown : Mobile Only -->
+					<svg class="icon" data-dropdown-button>
+						<use href="./images/sprite.svg#cross"></use>
+					</svg>
+					<svg class="icon" data-dropdown-button>
+						<use href=""></use>
+					</svg>
+
+					<!-- Navigation Links : Mobile Only -->
+					<ul class="dropdown__links">
+						<li><a href="#">Signup</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Products</a></li>
+						<li><a href="#">Pricing</a></li>
+						<li><a href="#">Support</a></li>
+					</ul>
+
+					<!-- Products Section -->
+					<article class="dropdown__products">
+						<div>
+							<img src="./images/products/kite-logo.svg" />
+							<a href="#">Kite</a>
+							<p>Trading platform</p>
+						</div>
+						<div>
+							<img src="./images/products/console.svg" />
+							<a href="#">Console</a>
+							<p>Backoffice</p>
+						</div>
+						<div>
+							<img src="./images/products/kite-connect.svg" />
+							<a href="#">Kite Connet</a>
+							<p>Trading APIs</p>
+						</div>
+						<div>
+							<img src="./images/products/coin.svg" />
+							<a href="#">Coin</a>
+							<p>Mutual funds</p>
+						</div>
+						<div class="education-mobile">
+							<img src="./images/products/varsity.png" />
+							<a href="#">Varsity</a>
+						</div>
+						<div class="education-mobile">
+							<img src="./images/products/tqna.png" />
+							<a href="#">Trading Q&A</a>
+						</div>
+					</article>
+
+					<!-- Footer Section -->
+					<footer class="dropdown__footer">
+						<div class="dropdown__footer-list">
+							<div>
+								<h3>Utilities</h3>
+								<ul>
+									<li><a href="#">Brokerage calculator</a></li>
+									<li><a href="#">Margin calculator</a></li>
+									<li><a href="#">Holidy calendar</a></li>
+								</ul>
+							</div>
+							<div>
+								<h3>Updates</h3>
+								<ul>
+									<li><a href="#">Z-Connect blog</a></li>
+									<li><a href="#">Pusle News</a></li>
+									<li><a href="#">Circulars / Bulletin</a></li>
+									<li><a href="#">IPOs</a></li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="dropdown__footer-education">
+							<h3>Education</h3>
+							<div class="dropdown__footer-education__content">
+								<div>
+									<img src="./images/products/varsity.png" />
+									<a href="#">Varsity</a>
+								</div>
+								<div>
+									<img class="trading" src="./images/products/tqna.png" />
+									<a href="#">Trading Q&A</a>
+								</div>
+							</div>
+						</div>
+					</footer>
+				</div>
+			</section>
 		</header>
+
+		<!-- Script for Dropdown Section -->
+		<script src="./js/main.js"></script>
 	</body>
 </html>
