--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -7,137 +7,27 @@
 		<link rel="stylesheet" href="./css/normalize.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
-	<body style="min-height: 200vh">
-		<header class="header">
-			<!-- Navabar -->
-			<nav class="nav">
-				<div class="container">
-					<!-- logo -->
-					<a href="#" class="nav__brand"
-						><img src="./images/logo.svg" alt="Zeroda"
-					/></a>
-
-					<!-- Navigation links -->
-					<ul class="navbar__links">
-						<li>
-							<a href="#">Signup</a>
-						</li>
-						<li>
-							<a href="#">About</a>
-						</li>
-						<li>
-							<a href="#">Products</a>
-						</li>
-						<li>
-							<a href="#">Pricing</a>
-						</li>
-						<li>
-							<a href="#">Support</a>
-						</li>
-					</ul>
-
-					<!-- Hamburger Menu -->
-					<div class="hamburger" data-dropdown-button>
-						<svg class="icon" data-dropdown-button>
-							<use href="./images/sprite.svg#menu"></use>
-						</svg>
-					</div>
-				</div>
-			</nav>
-
-			<!-- Dropdown Menu -->
-			<section class="dropdown" data-dropdown>
-				<div class="dropdown-menu">
-					<!-- Cross icon for closing Dropdown : Mobile Only -->
-					<svg class="icon" data-dropdown-button>
-						<use href="./images/sprite.svg#cross"></use>
-					</svg>
-					<svg class="icon" data-dropdown-button>
-						<use href=""></use>
-					</svg>
-
-					<!-- Navigation Links : Mobile Only -->
-					<ul class="dropdown__links">
-						<li><a href="#">Signup</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Products</a></li>
-						<li><a href="#">Pricing</a></li>
-						<li><a href="#">Support</a></li>
-					</ul>
-
-					<!-- Products Section -->
-					<article class="dropdown__products">
-						<div>
-							<img src="./images/products/kite-logo.svg" />
-							<a href="#">Kite</a>
-							<p>Trading platform</p>
-						</div>
-						<div>
-							<img src="./images/products/console.svg" />
-							<a href="#">Console</a>
-							<p>Backoffice</p>
-						</div>
-						<div>
-							<img src="./images/products/kite-connect.svg" />
-							<a href="#">Kite Connet</a>
-							<p>Trading APIs</p>
-						</div>
-						<div>
-							<img src="./images/products/coin.svg" />
-							<a href="#">Coin</a>
-							<p>Mutual funds</p>
-						</div>
-						<div class="education-mobile">
-							<img src="./images/products/varsity.png" />
-							<a href="#">Varsity</a>
-						</div>
-						<div class="education-mobile">
-							<img src="./images/products/tqna.png" />
-							<a href="#">Trading Q&A</a>
-						</div>
-					</article>
-
-					<!-- Footer Section -->
-					<footer class="dropdown__footer">
-						<div class="dropdown__footer-list">
-							<div>
-								<h3>Utilities</h3>
-								<ul>
-									<li><a href="#">Brokerage calculator</a></li>
-									<li><a href="#">Margin calculator</a></li>
-									<li><a href="#">Holidy calendar</a></li>
-								</ul>
-							</div>
-							<div>
-								<h3>Updates</h3>
-								<ul>
-									<li><a href="#">Z-Connect blog</a></li>
-									<li><a href="#">Pusle News</a></li>
-									<li><a href="#">Circulars / Bulletin</a></li>
-									<li><a href="#">IPOs</a></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="dropdown__footer-education">
-							<h3>Education</h3>
-							<div class="dropdown__footer-education__content">
-								<div>
-									<img src="./images/products/varsity.png" />
-									<a href="#">Varsity</a>
-								</div>
-								<div>
-									<img class="trading" src="./images/products/tqna.png" />
-									<a href="#">Trading Q&A</a>
-								</div>
-							</div>
-						</div>
-					</footer>
-				</div>
-			</section>
-		</header>
-
-		<!-- Script for Dropdown Section -->
-		<script src="./js/main.js"></script>
+	<body>
+		<p>Hero Component</p>
+		<section class="hero">
+			<div class="container">
+				<picture>
+					<source
+						type="image/webp"
+						srcset="./images/landing.webp 1x, ./images/landing@2x.webp 2x"
+					/>
+					<source
+						type="image/png"
+						srcset="./images/landing.png 1x, ./images/landing@2x.png 2x"
+					/>
+					<img class="hero__image" src="./images/landing.png" alt="" />
+				</picture>
+				<header class="hero__header">
+					<h1 class="hero__heading">Heading Goes Here</h1>
+					<p>Tagline goes here which gives idea about brand</p>
+					<a href="#" class="btn">Call To Action</a>
+				</header>
+			</div>
+		</section>
 	</body>
 </html>
