feat: create education component for informative content

--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -8,26 +8,23 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<p>Marketing Component</p>
-		<section class="marketing">
+		<p>Education Component</p>
+		<section class="education">
 			<div class="container grid grid--1x2">
-				<img class="marketing__image" src="./images/largest-broker.svg" alt="" />
-				<header class="marketing__header">
-					<h2 class="marketing__heading">Heading Goes Here</h2>
-					<p>Tagline goes here which gives idea about brand</p>
-					<div class="grid grid--1x2">
-						<ul>
-							<li>Item 1 is listed here</li>
-							<li>Item 2 is listed here</li>
-							<li>Item 3 is listed here</li>
-						</ul>
-						<ul>
-							<li>Item 1 is listed here</li>
-							<li>Item 2 is listed here</li>
-							<li>Item 3 is listed here</li>
-						</ul>
-					</div>
-					<img src="./images/press-logos.png" alt="" />
+				<img src="./images/education.svg" alt="" />
+				<header class="education__header">
+					<h3 class="education__heading">Heading Goes Here</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+						officia dolores quidem maxime repellendus magnam.
+					</p>
+					<a href="#" class="link-arrow">Learn More</a>
+
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+						officia dolores quidem maxime repellendus magnam.
+					</p>
+					<a href="#" class="link-arrow">Learn More</a>
 				</header>
 			</div>
 		</section>
