--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -8,24 +8,27 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<p>Education Component</p>
-		<section class="education">
+		<p>Pricing Component</p>
+		<section class="pricing">
 			<div class="container grid grid--1x2">
-				<img src="./images/education.svg" alt="" />
-				<header class="education__header">
-					<h3 class="education__heading">Heading Goes Here</h3>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-						officia dolores quidem maxime repellendus magnam.
-					</p>
-					<a href="#" class="link-arrow">Learn More</a>
-
+				<header class="pricing__header">
+					<h2 class="pricing__heading">Heading Goes Here</h2>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
 						officia dolores quidem maxime repellendus magnam.
 					</p>
 					<a href="#" class="link-arrow">Learn More</a>
 				</header>
+				<article class="grid grid--1x2 pricing__content">
+					<div>
+						<h2>₹0</h2>
+						<p>Free equaity delivery and direct mutual funds</p>
+					</div>
+					<div>
+						<h2>₹20</h2>
+						<p>Intraday and F&O</p>
+					</div>
+				</article>
 			</div>
 		</section>
 	</body>
