feat: develop ecosystem component

--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -8,27 +8,28 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<p>Pricing Component</p>
-		<section class="pricing">
-			<div class="container grid grid--1x2">
-				<header class="pricing__header">
-					<h2 class="pricing__heading">Heading Goes Here</h2>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-						officia dolores quidem maxime repellendus magnam.
-					</p>
-					<a href="#" class="link-arrow">Learn More</a>
-				</header>
-				<article class="grid grid--1x2 pricing__content">
-					<div>
-						<h2>₹0</h2>
-						<p>Free equaity delivery and direct mutual funds</p>
-					</div>
-					<div>
-						<h2>₹20</h2>
-						<p>Intraday and F&O</p>
-					</div>
-				</article>
+		<p>Ecosystem Component</p>
+		<section class="ecosystem">
+			<header class="ecosystem__header">
+				<h2 class="ecosystem__heading">Heading Goes Here</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					<br />
+					Inventore officia dolores quidem maxime repellendus magnam.
+				</p>
+			</header>
+			<picture>
+				<source type="image/webp" srcset="./images/ecosystem.webp" />
+				<source type="image/png" srcset="./images/ecosystem.png" />
+				<img
+					class="ecosystem__image"
+					src="./images/ecosystem.png"
+					alt="The Zerodha Universe"
+				/>
+			</picture>
+			<div>
+				<a href="#" class="link-arrow">Learn More</a>
+				<a href="#" class="link-arrow">Learn More</a>
 			</div>
 		</section>
 	</body>
