--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -8,29 +8,13 @@
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<p>Ecosystem Component</p>
-		<section class="ecosystem">
-			<header class="ecosystem__header">
-				<h2 class="ecosystem__heading">Heading Goes Here</h2>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit.
-					<br />
-					Inventore officia dolores quidem maxime repellendus magnam.
-				</p>
+		<p>Callout Component</p>
+		<section class="callout">
+			<header class="callout__header">
+				<h2 class="callout__heading">Heading Goes Here</h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 			</header>
-			<picture>
-				<source type="image/webp" srcset="./images/ecosystem.webp" />
-				<source type="image/png" srcset="./images/ecosystem.png" />
-				<img
-					class="ecosystem__image"
-					src="./images/ecosystem.png"
-					alt="The Zerodha Universe"
-				/>
-			</picture>
-			<div>
-				<a href="#" class="link-arrow">Learn More</a>
-				<a href="#" class="link-arrow">Learn More</a>
-			</div>
+			<a href="/" class="btn">Call To Action</a>
 		</section>
 	</body>
 </html>
