fix: address minor HTML & JS adjustments in Zerodha landing page

--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -164,7 +164,7 @@
 							Online platform to invest in stocks, derivatives, mutual funds,
 							and more
 						</p>
-						<a href="/" class="btn">Sign up now</a>
+						<a href="#" class="btn">Sign up now</a>
 					</header>
 				</div>
 			</section>
@@ -273,13 +273,15 @@
 			<!-- Callout Section-->
 			<section class="section callout">
 				<header class="callout__header">
-					<h2 class="callout__heading">Open a Zerodha account</h2>
-					<p>
-						Modern platforms and apps, ₹0 investments, and flat ₹20 intraday and
-						F&O trades.
-					</p>
+					<div class="container">
+						<h2 class="callout__heading">Open a Zerodha account</h2>
+						<p>
+							Modern platforms and apps, ₹0 investments, and flat ₹20 intraday
+							and F&O trades.
+						</p>
+					</div>
 				</header>
-				<a href="/" class="btn">Sign up now</a>
+				<a href="#" class="btn">Sign up now</a>
 			</section>
 		</main>
 
