style: optimize meta elements for improved SEO

--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -3,13 +3,40 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Zeroda</title>
+
+		<!-- SEO Optimization -->
+		<meta
+			name="description"
+			content="Zerodha - India's biggest stock broker offering the lowest, cheapest brokerage rates for futures and options, commodity trading, equity and mutual funds"
+		/>
+		<meta
+			name="keywords"
+			content="discount broker, discount brokerage, lowest brokerage commissions, lowest brokerage fees, indian discount brokerage, indian discount broker, cheap brokerage, discount brokerage bangalore, fixed brokerage bangalore, cheap trading, cheap commodity trading, trading terminal, futures trading, stock broker, fixed stock brokerage, cheapest brokerage, cheapest brokerage in india, online trading, online brokerage, cheap demat account, bangalore broker, commodities trading"
+		/>
+
+		<!-- Open Graph -->
+		<meta
+			property="og:description"
+			content="Zerodha - India's biggest stock broker offering the lowest, cheapest brokerage rates for futures and options, commodity trading, equity and mutual funds"
+		/>
+		<meta
+			property="og:image:alt"
+			content="Zerodha - Online stock trading at lowest prices from India's biggest stock broker"
+		/>
+		<meta property="og:title" content="Zerodha" />
+		<meta property="og:type" content="website" />
+
+		<title>Zerodha Landing - Akash</title>
+
+		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
 			rel="stylesheet"
 		/>
+
+		<!-- Stylesheets -->
 		<link rel="stylesheet" href="./css/normalize.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
