fix: address HTML validation issues

--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -102,37 +102,37 @@
 					<!-- Products Section -->
 					<article class="dropdown__products">
 						<div>
-							<img src="./images/products/kite-logo.svg" />
+							<img src="./images/products/kite-logo.svg" alt="" />
 							<a href="#">Kite</a>
 							<p>Trading platform</p>
 						</div>
 						<div>
-							<img src="./images/products/console.svg" />
+							<img src="./images/products/console.svg" alt="" />
 							<a href="#">Console</a>
 							<p>Backoffice</p>
 						</div>
 						<div>
-							<img src="./images/products/kite-connect.svg" />
+							<img src="./images/products/kite-connect.svg" alt="" />
 							<a href="#">Kite Connet</a>
 							<p>Trading APIs</p>
 						</div>
 						<div>
-							<img src="./images/products/coin.svg" />
+							<img src="./images/products/coin.svg" alt="" />
 							<a href="#">Coin</a>
 							<p>Mutual funds</p>
 						</div>
 						<div class="education-mobile">
-							<img src="./images/products/varsity.png" />
+							<img src="./images/products/varsity.png" alt="" />
 							<a href="#">Varsity</a>
 						</div>
 						<div class="education-mobile">
-							<img src="./images/products/tqna.png" />
+							<img src="./images/products/tqna.png" alt="" />
 							<a href="#">Trading Q&A</a>
 						</div>
 					</article>
 
 					<!-- Footer Section -->
-					<footer class="dropdown__footer">
+					<article class="dropdown__footer">
 						<div class="dropdown__footer-list">
 							<div>
 								<h3>Utilities</h3>
@@ -157,16 +157,20 @@
 							<h3>Education</h3>
 							<div class="dropdown__footer-education__content">
 								<div>
-									<img src="./images/products/varsity.png" />
+									<img src="./images/products/varsity.png" alt="" />
 									<a href="#">Varsity</a>
 								</div>
 								<div>
-									<img class="trading" src="./images/products/tqna.png" />
+									<img
+										class="trading"
+										src="./images/products/tqna.png"
+										alt=""
+									/>
 									<a href="#">Trading Q&A</a>
 								</div>
 							</div>
 						</div>
-					</footer>
+					</article>
 				</div>
 			</section>
 		</header>
@@ -283,7 +287,7 @@
 			<!-- Education Section-->
 			<section class="section education">
 				<div class="container grid grid--1x2">
-					<img src="./images/education.svg" alt="" data-aos="fade-up"/>
+					<img src="./images/education.svg" alt="" data-aos="fade-up" />
 					<header class="education__header">
 						<h3 class="education__heading">Free and open market education</h3>
 						<p>
