style: implement favicons for improved user experience

--- a/0-1/assignments/week-0/index.html
+++ b/0-1/assignments/week-0/index.html
@@ -28,6 +28,9 @@
 
 		<title>Zerodha Landing - Akash</title>
 
+		<!-- Favicon -->
+		<link rel="icon" href="./images/favicon.png" />
+
 		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
