--- a/index.html
+++ b/index.html
@@ -339,7 +339,8 @@
 						</p>
 						<div class="socials">
 							<a href="https://linktr.ee/kadlagakash" target="_blank">
-								<svg class="icon">
+								<svg class="icon" role="img">
+									<title>Linktree</title>
 									<use href="./images/sprite.svg#linktree"></use>
 								</svg>
 							</a>
@@ -347,17 +348,20 @@
 								href="https://www.linkedin.com/in/kadlagakash/"
 								target="_blank"
 							>
-								<svg class="icon">
+								<svg class="icon" role="img">
+									<title>LinkedIn</title>
 									<use href="./images/sprite.svg#linkedin"></use>
 								</svg>
 							</a>
 							<a href="https://twitter.com/KadlagAkash" target="_blank">
-								<svg class="icon">
+								<svg class="icon" role="img">
+									<title>Twitter</title>
 									<use href="./images/sprite.svg#twitter"></use>
 								</svg>
 							</a>
-							<a href="" target="_blank">
-								<svg class="icon">
+							<a href="https://github.com/KadlagAkash/zerodha-landing-replica" target="_blank">
+								<svg class="icon" role="img">
+									<title>GitHub</title>
 									<use href="./images/sprite.svg#github"></use>
 								</svg>
 							</a>
