chore: update open graph properties

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 		/>
 		<meta property="og:title" content="Zerodha" />
 		<meta property="og:type" content="website" />
+		<meta
+			property="og:img"
+			content="https://zerodha-landing-replica.vercel.app/logo.e1876e47.svg"
+		/>
+		<meta property="og:url" content="https://zerodha-landing-replica.vercel.app/" />
 
 		<title>Zerodha Landing - Akash</title>
 
@@ -359,7 +364,10 @@
 									<use href="./images/sprite.svg#twitter"></use>
 								</svg>
 							</a>
-							<a href="https://github.com/KadlagAkash/zerodha-landing-replica" target="_blank">
+							<a
+								href="https://github.com/KadlagAkash/zerodha-landing-replica"
+								target="_blank"
+							>
 								<svg class="icon" role="img">
 									<title>GitHub</title>
 									<use href="./images/sprite.svg#github"></use>
