--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 			property="og:img"
 			content="https://zerodha-landing-replica.vercel.app/logo.e1876e47.svg"
 		/>
-		<meta property="og:url" content="https://zerodha-landing-replica.vercel.app/" />
+		<meta
+			property="og:url"
+			content="https://zerodha-landing-replica.vercel.app/"
+		/>
 
 		<title>Zerodha Landing - Akash</title>
 
@@ -338,34 +341,31 @@
 						/></a>
 						<p class="footer__copyright">
 							&copy; 2024, Designed by
-							<a href="https://linktr.ee/KadlagAkash">Akash Kadlag</a>.
+							<a href="https://yntp.me">Akash Kadlag</a>.
 							<br />
 							For Educational Purposes Only.
 						</p>
 						<div class="socials">
-							<a href="https://linktr.ee/kadlagakash" target="_blank">
+							<a href="https://linktr.ee/yntp.me" target="_blank">
 								<svg class="icon" role="img">
 									<title>Linktree</title>
 									<use href="./images/sprite.svg#linktree"></use>
 								</svg>
 							</a>
-							<a
-								href="https://www.linkedin.com/in/kadlagakash/"
-								target="_blank"
-							>
+							<a href="https://www.linkedin.com/in/yntpdotme/" target="_blank">
 								<svg class="icon" role="img">
 									<title>LinkedIn</title>
 									<use href="./images/sprite.svg#linkedin"></use>
 								</svg>
 							</a>
-							<a href="https://twitter.com/KadlagAkash" target="_blank">
+							<a href="https://twitter.com/yntpdotme" target="_blank">
 								<svg class="icon" role="img">
 									<title>Twitter</title>
 									<use href="./images/sprite.svg#twitter"></use>
 								</svg>
 							</a>
 							<a
-								href="https://github.com/KadlagAkash/zerodha-landing-replica"
+								href="https://github.com/yntpdotme/zerodha-landing-replica"
 								target="_blank"
 							>
 								<svg class="icon" role="img">
